# ScenePoint-ETK

./: .gitignore  .gitmodules  LICENSE  README.md  customized.css  index.html  pyproject.toml  setup.py
docs/source/: conf.py  download.rst  index.rst
docs/source/api/: argoverse2.rst  index.rst  scene_db.rst
docs/source/basic_usage/: 00.rst
examples/: 01.setup_env_path.ipynb  02.usage.argoverse2.ipynb  03.usage.patch_db.ipynb
examples/create_static_edited_scene/: 02.create_static_scene(gt).ipynb  03.edit_static_scene(v0).ipynb
examples/demo.portabiltiy/: demo.0.ipynb
scripts/: 00.download_sensor_dataset.py  01.create_static_scene.py  02.edit_static_scene.py  02.infer_static_color.py  03.edit_static_scene.py  04.post_process_edited_scene.py  common.py  fix.add_merge_indices.py  quantify.scene.py
scripts/configs/: overall_configs.yaml
scripts/quantify/: quantify.area.py  quantify.scene.py  quantify.space.py  quantify.time.py
src/scene_point_etk/: __init__.py  config.json
src/scene_point_etk/argoverse2/: __init__.py  av2_annotations.py  av2_basic_tools.py  av2_image_sequence.py  av2_sweep.py  city_2_log_id.json  log_splits.json
src/scene_point_etk/evaluation/: __init__.py  map_updating.py  pcd_to_pcd.py
src/scene_point_etk/patch_db/: __init__.py
src/scene_point_etk/scene_db/: __init__.py  diff_scene.py  image.py  mixin.py  scene.py
src/scene_point_etk/utils/: __init__.py  clustering.py  ground_process.py  s5_cmd.py
src/scene_point_etk/visualization/: __init__.py  vis_pptk.py
test/: test_argoverse2.py  test_evaluation.py
